--- a/h/hd/hdw/hdwon.net.html
+++ b/h/hd/hdw/hdwon.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hdwon.net privacy policy that was archived on 2016-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161127182745id_/http%3A//hdwon.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hdwon.net privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605012437id_/http%3A//www.hdwon.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -12,7 +12,8 @@
 <link rel="STYLESHEET" type="text/css" href="/styles.css">
 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/blitzer/jquery-ui.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/basic.css">
-<link rel="stylesheet" type="text/css" href="/css/full_styles.css"><style>
+<link rel="stylesheet" type="text/css" href="/css/full_styles.css">
+<style>
 /*
 URL: http://mp3lio.cf
 */
@@ -43,8 +44,21 @@ URL: http://mp3lio.cf
 <form action="/cari.php" id="autoform" class="search-form">
 <input id="inputs" type="text" class="inp-text" placeholder="Search Keyword..." name="q" value="">              
 <input type="hidden" name="as_sitesearch" value="search">  <input type="submit" value="Search" class="inp-button"> <br><input type="radio" name="type" checked="checked" value="video"> Video <input type="radio" name="type" value="music"> Music <input type="radio" name="type" value="sms"> Sms</form></div></h2>
-
-<div class="body_contents">
+<center><!-- Ranads - ad code starts -->
+<span id="show_ads_202b31357788f7f1c0b6adb20ab33a15_1"></span>
+<script async="" src="https://www.google-analytics.com/analytics.js"></script><script language="javascript" type="text/javascript" src="http://ranads.com/show-ads.js"></script>
+<script language="javascript">
+if (window.ads_202b31357788f7f1c0b6adb20ab33a15 ){ ads_202b31357788f7f1c0b6adb20ab33a15+= 1;}else{ ads_202b31357788f7f1c0b6adb20ab33a15 =1;}
+ads_202b31357788f7f1c0b6adb20ab33a15_1=ads_202b31357788f7f1c0b6adb20ab33a15;
+timer_202b31357788f7f1c0b6adb20ab33a151=window.setInterval(function(){
+if(window.gc4ca4238a0b923820dcc509a6f75849b){
+setTimeout("showAdsforContent(1,320,50,'http://ranads.com/publisher-show-ads.php',"+ads_202b31357788f7f1c0b6adb20ab33a15_1+",'ads_202b31357788f7f1c0b6adb20ab33a15')",1000*(ads_202b31357788f7f1c0b6adb20ab33a15_1 -1));
+window.clearInterval(timer_202b31357788f7f1c0b6adb20ab33a151);}},100);
+ads_202b31357788f7f1c0b6adb20ab33a15_1_position=0;
+</script>
+<!-- Ranads - ad code  ends --></center>
+<center>
+</center><div class="body_contents">
 <div class="left-content">
 <h2 class="main-menu"><div id="tab"> Privacy &amp; Policy </div></h2><p>What information do we collect? We donot collect any kind of information. Do we use cookies? We do use cookies but over SSL only. <br><br>
 Do we disclose any information to outside parties? We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. <br><br>
@@ -53,8 +67,7 @@ This does not include trusted third parties who assist us in operating our websi
  However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.<br><br>
 Online Privacy Policy Only This online privacy policy applies only to information collected through our website and not to information collected offline. <br><br>
 Your Consent By using our site, you consent to our web site privacy policy. Changes to our Privacy Policy If we decide to change our privacy policy, we will post those changes on this page. <br><b></b></p><center><b>Contact us: <font color="green">Wapgan.com@gmail.com</font></b></center><p></p>
-</div><div class="right-content">
-<h2 class="main-menu"><div id="tab">Category</div></h2>
+</div><div class="right-content"><h2 class="main-menu"><div id="tab">Ads</div></h2><h2 class="main-menu"><div id="tab">Category</div></h2>
 <div class="list"> <a href="/video/category/Sunny-Leone-Hot-HD-Video.html">Sunny Leone Hot HD Video</a></div>
 <div class="list"> <a href="/video/category/Baal-Veer-Full-Episodes-Sab-Tv.html">Baal Veer Full Episodes (Sab Tv)</a></div>
 <div class="list"> <a href="/video/category/Jaha-Bolibo-Sotto-Bolibo.html">Jaha Bolibo Sotto Bolibo 2015</a></div>
@@ -81,19 +94,23 @@ Your Consent By using our site, you consent to our web site privacy policy. Chan
 <div class="list"> <a href="/video/category/Vodafone-Zoo-Zoo-Funny-Videos.html">Vodafone Zoo Zoo Funny Videos</a></div>
 <div class="list"> <a href="/video/category/Shakira's-Album-Videos-2015.html">Shakira's Album Videos</a></div>
 <div class="list"> <a href="/video/category/Justine-Bieber-Video-Songs-2015.html">Justine Bieber Video Songs</a></div>
-<div class="list"> <a href="/video/category/Dangerous-Videos-2015.html">Dangerous Videos</a></div><h2 class="main-menu"><div id="tab">Last Search</div></h2><div class="list"><a href="/video/category/akshay-kumar-hit-songs.html">akshay kumar hit songs</a></div><div class="list"><a href="/video/category/Cell.html">Cell</a></div><div class="list"><a href="/video/category/Polatlı.html">Polatlı</a></div><div class="list"><a href="/video/category/i’m.html">i’m</a></div><div class="list"><a href="/video/category/üslü-sayılar-tonguç-teog.html">üslü sayılar tonguç teog</a></div><div class="list"><a href="/video/category/Sachin-Tendulkar-Best-performance.html">Sachin Tendulkar Best performance</a></div><div class="list"><a href="/video/category/Wesz.html">Wesz</a></div><div class="list"><a href="/video/category/Non-stop.html">Non stop</a></div><div class="list"><a href="/video/category/hipnotizar.html">hipnotizar</a></div><div class="list"><a href="/video/category/csu.html">csu</a></div><div class="list"><a href="/video/category/.html"></a></div><div class="list"><a href="/video/category/Kolkata-16.html">Kolkata 16</a></div><div class="list"><a href="/video/category/prog-gnosis/.html">prog gnosis/</a></div><div class="list"><a href="/video/category/daily-tv-patrol-news.html">daily tv patrol news</a></div><div class="list"><a href="/video/category/BAAD.html">BAAD</a></div><div class="list"><a href="/video/category/ultras-liberi.html">ultras liberi</a></div><div class="list"><a href="/video/category/dk4l.html">dk4l</a></div><div class="list"><a href="/video/category/2011-2012.html">2011 2012</a></div><div class="list"><a href="/video/category/Code.html">Code</a></div><div class="list"><a href="/video/category/hardline-top-plays.html">hardline top plays</a></div><div class="list"><a href="/video/category/seduce.html">seduce</a></div></div>
+<div class="list"> <a href="/video/category/Dangerous-Videos-2015.html">Dangerous Videos</a></div>
+
+<h2 class="main-menu"><div id="tab">Last Search</div></h2><div class="list"><a href="/video/category/.html"></a></div><div class="list"><a href="/video/category/Amaric-dawa.html">Amaric dawa</a></div><div class="list"><a href="/video/category/nokia-x2-01-games.html">nokia x2 01 games</a></div><div class="list"><a href="/video/category/pilot´s-eye.html">pilot´s eye</a></div><div class="list"><a href="/video/category/cartoon-games-y8.html">cartoon games y8</a></div><div class="list"><a href="/video/category/belly-dancing-colombo.html">belly dancing colombo</a></div><div class="list"><a href="/video/category/stage-drama-zafri-khan.html">stage drama zafri khan</a></div><div class="list"><a href="/video/category/bhajan.html">bhajan</a></div><div class="list"><a href="/video/category/Srirampur.html">Srirampur</a></div><div class="list"><a href="/video/category/ençokizlenen.html">ençokizlenen</a></div><div class="list"><a href="/video/category/lienden.html">lienden</a></div><div class="list"><a href="/video/category/Banu.html">Banu</a></div><div class="list"><a href="/video/category/Quảng-cáo-cho-bé.html">Quảng cáo cho bé</a></div><div class="list"><a href="/video/category/Removal-of-fluied-in-the-lung.html">Removal of fluied in the lung</a></div><div class="list"><a href="/video/category/Электронная-сигарета-обзор.html">Электронная сигарета обзор</a></div><div class="list"><a href="/video/category/FUNCK.html">FUNCK</a></div><div class="list"><a href="/video/category/ingredienti.html">ingredienti</a></div><div class="list"><a href="/video/category/얼음땡.html">얼음땡</a></div><div class="list"><a href="/video/category/contano.html">contano</a></div><div class="list"><a href="/video/category/クワッド.html">クワッド</a></div><div class="list"><a href="/video/category/Xperia-l.html">Xperia l</a></div></div>
+
 </div>
 </div>
-<script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-86295287-1', 'auto');
+  ga('create', 'UA-98464312-1', 'auto');
   ga('send', 'pageview');
 
 </script>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js" type="text/javascript"></script>
 <script>
@@ -154,10 +171,9 @@ $('#inputs').googleSuggest();
 <span><a href="/dmca.php">Copyright</a></span>
 <span><a href="/contact.php">Contact</a></span></div> 
 <div align="center"><div class="footer">HDWon.Com © 2016-17.</div></div> 
-<!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="http://widget.supercounters.com/online_i.js"></script><script type="text/javascript">sc_online_i(1329214,"ffffff","e61c1c");</script><br><noscript><a href="http://www.supercounters.com/">Free Online Counter</a></noscript>
+<script language="javascript">document.write(unescape('%3c%64%69%76%20%73%74%79%6c%65%3d%22%70%6f%73%69%74%69%6f%6e%3a%20%72%65%6c%61%74%69%76%65%3b%20%76%69%73%69%62%69%6c%69%74%79%3a%20%68%69%64%64%65%6e%3b%20%64%69%73%70%6c%61%79%3a%20%6e%6f%6e%65%3b%22%3e%3c%63%65%6e%74%65%72%3e%3c%73%63%72%69%70%74%20%74%79%70%65%3d%22%74%65%78%74%2f%6a%61%76%61%73%63%72%69%70%74%22%20%73%72%63%3d%22%68%74%74%70%3a%2f%2f%77%69%64%67%65%74%2e%73%75%70%65%72%63%6f%75%6e%74%65%72%73%2e%63%6f%6d%2f%6f%6e%6c%69%6e%65%5f%74%2e%6a%73%22%3e%3c%2f%73%63%72%69%70%74%3e%3c%73%63%72%69%70%74%20%74%79%70%65%3d%22%74%65%78%74%2f%6a%61%76%61%73%63%72%69%70%74%22%3e%73%63%5f%6f%6e%6c%69%6e%65%5f%74%28%31%33%32%39%32%31%34%2c%22%22%2c%22%31%37%30%64%64%62%22%29%3b%3c%2f%73%63%72%69%70%74%3e%3c%62%72%3e%3c%6e%6f%73%63%72%69%70%74%3e%3c%61%20%68%72%65%66%3d%22%68%74%74%70%3a%2f%2f%77%77%77%2e%73%75%70%65%72%63%6f%75%6e%74%65%72%73%2e%63%6f%6d%2f%22%3e%46%72%65%65%20%55%73%65%72%73%20%4f%6e%6c%69%6e%65%20%43%6f%75%6e%74%65%72%3c%2f%61%3e%3c%2f%6e%6f%73%63%72%69%70%74%3e%0a%3c%2f%63%65%6e%74%65%72%3e%0a%3c%2f%64%69%76%3e%0a'));</script><div style="position: relative; visibility: hidden; display: none;"><center><script type="text/javascript" src="http://widget.supercounters.com/online_t.js"></script><script type="text/javascript">sc_online_t(1329214,"","170ddb");</script><br><noscript><a href="http://www.supercounters.com/">Free Users Online Counter</a></noscript>
 </center>
-<!-- END: Powered by Supercounters.com -->
+</div>
 
 
 
