--- a/v/vi/vis/visitkochijapan.com.html
+++ b/v/vi/vis/visitkochijapan.com.html
@@ -1,9 +1,8 @@
-<!--The following is the downloaded HTML source of the visitkochijapan.com privacy policy that was archived on 2016-10-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161030032017id_/http%3A//visitkochijapan.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the visitkochijapan.com privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605022009id_/http%3A//visitkochijapan.com/privacypolicy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html dir="ltr" lang="en" style="" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head>
+<!DOCTYPE html><html dir="ltr" lang="en"><head>
 <title>Privacy Policy - VISIT KOCHI JAPAN</title>
-
 
 <meta charset="UTF-8">
 <meta name="language" content="en">
@@ -22,13 +21,9 @@
 <meta property="og:title" content="Visit Kochi Japan│The blessings of nature">
 
 
-
 <meta property="og:description" content="">
-
 <meta property="og:url" content="http://visitkochijapan.com/privacypolicy/">
-
-<meta property="og:image" content="http://visitkochijapan.com/images/ogimage.jpg">
-
+<meta property="og:image" content="http://visitkochistage.com/images/ogimage.jpg">
 
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -86,6 +81,7 @@ $(function(){
 </script>
 <link rel="stylesheet" href="/css/ie8.css" />
 <![endif]-->
+
 </head>
 <body class="other privacypolicy">
 <script>
@@ -126,14 +122,14 @@ $(function(){
 						document.write('<li class="tw"><a href="http://tw.' + ntext + '#lang" class="alphabtn">繁體中文</a></li>');
 						document.write('<li class="kr"><a href="http://kr.' + ntext + '#lang" class="alphabtn">한국어</a></li>');
 						document.write('<li class="th"><a href="http://th.' + ntext + '#lang" class="alphabtn">ไทย</a></li>');
-					</script><li class="en current"><a href="http:///web.archive.org/web/20161030032017id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">English</a></li><li class="ch"><a href="http://cn./web.archive.org/web/20161030032017id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">简体中文</a></li><li class="tw"><a href="http://tw./web.archive.org/web/20161030032017id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">繁體中文</a></li><li class="kr"><a href="http://kr./web.archive.org/web/20161030032017id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">한국어</a></li><li class="th"><a href="http://th./web.archive.org/web/20161030032017id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">ไทย</a></li>
+					</script><li class="en current"><a href="http:///web.archive.org/web/20170605022009id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">English</a></li><li class="ch"><a href="http://cn./web.archive.org/web/20170605022009id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">简体中文</a></li><li class="tw"><a href="http://tw./web.archive.org/web/20170605022009id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">繁體中文</a></li><li class="kr"><a href="http://kr./web.archive.org/web/20170605022009id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">한국어</a></li><li class="th"><a href="http://th./web.archive.org/web/20170605022009id_/http://visitkochijapan.com/privacypolicy/#lang" class="alphabtn">ไทย</a></li>
 				</ul>
 			</div>
 			<div class="weather">
 				<span>
 				<script type="text/javascript">
 				now=new Date(); tzo=(now.getTimezoneOffset()); now.setTime(now.getTime()+(tzo+540)*60*1000); month=new Array(); month[0]="Jan"; month[1]="Feb"; month[2]="Mar"; month[3]="Apr"; month[4]="May "; month[5]="Jun"; month[6]="Jul"; month[7]="Aug"; month[8]="Sep"; month[9]="Oct"; month[10]="Nov"; month[11]="Dec"; yr=(now.getYear()<1000)? now.getYear()+1900:now.getYear(); mo=month[now.getMonth()]; dy=now.getDate(); if (dy<10) { dy="0"+dy; } document.write(mo+' '+dy+', '+yr+' / ' );
-				</script>Feb 24, 2020 / 
+				</script>Jan 31, 2020 / 
 				</span>
 				<span class="weather_temp_f"></span>
 				<span class="weather_temp_image_f"></span>
@@ -141,31 +137,31 @@ $(function(){
 			<div class="search">
 				<gcse:searchbox-only></gcse:searchbox-only>
 			</div>
-					<div class="link">
+<div class="link">
 						<ul>
 							<li><a href="https://www.youtube.com/c/Visitkochijapan_movie" target="_blank" class="alphabtn"><img src="/images/common/btn_yt.png" alt="YouTube"></a></li>
 							<li><a href="https://twitter.com/visit_kochi" target="_blank" class="alphabtn"><span class="icon-twitter2 head-icon-tw"></span></a></li>
 							<li><a href="https://www.facebook.com/visitkochijapan" target="_blank" class="alphabtn"><span class="icon-facebook2 head-icon-fb"></span></a></li>
 						</ul>
 					</div>
+
 		</div>
 		<div id="side-nav-open">
 			<a href="#">OPEN</a>
 		</div>
 	</div>
 
-	<script>
-	(function() {
-	var cx = '006935153823064219302:hzwe_ko7goy';
-	var gcse = document.createElement('script');
-	gcse.type = 'text/javascript';
-	gcse.async = true;
-	gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-	'//cse.google.com/cse.js?cx=' + cx;
-	var s = document.getElementsByTagName('script')[0];
-	s.parentNode.insertBefore(gcse, s);
-	})();
-	</script>
+<script>
+  (function() {
+    var cx = '006935153823064219302:hzwe_ko7goy';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
 </header>
 <!-- /header -->
 		<!-- #contents -->
@@ -193,6 +189,9 @@ $(function(){
 				</li>
 				<li class="nav03">
 					<a href="/special/">Specials</a>
+					<a href="/special/spiritual_sites/">Spiritual sites and relaxing spas to cleanse both body and mind</a>
+					<a href="/special/treat_your_body/">Treat your body and your taste buds in Kochi</a>
+					<a href="/special/onlyinkochi/">Only in Kochi</a>	
 					<a href="/special/outdoors/">The Great Outdoors Just Down the Road</a>
 					<a href="/special/breathtaking/">Enjoy Kochi's Breathtaking Natural Beauty</a>
 					<a href="/special/spiritual/">Spiritual Kochi</a>
@@ -210,7 +209,7 @@ $(function(){
 				<li class="nav05">
 					<a href="/plan_your_trip/">Plan Your Trip</a>
 					<a href="/plan_your_trip/#pickup-anchor">Kochi Tour</a>
-					<a href="/plan_your_trip/#popular-anchor">Shikoku Tour</a>
+					<!-- <a href="/plan_your_trip/#popular-anchor">Shikoku Tour</a> -->
 					<a href="/plan_your_trip/transportation/">Transportation</a>
 				</li>
 				<li class="nav06">
@@ -297,9 +296,9 @@ var description = $("meta[name=description]").attr("content");
 			<dt>SHARE ON：</dt>
 			<dd>
 				<ul>
-					<script>document.write('<li><a href="http://www.facebook.com/sharer.php?u=' + url + '&t=' + title + '" class="snspopup"><span class="icon-facebook">    SHARE</span></a></li>');</script><li><a href="http://www.facebook.com/sharer.php?u=https://web.archive.org/web/20161030032017id_/http://visitkochijapan.com/privacypolicy/&amp;t=Visit Kochi Japan - The blessings of nature " class="snspopup"><span class="icon-facebook">    SHARE</span></a></li>
-					<script>document.write('<li><a href="http://twitter.com/share?url=' + url + '&text=' + title + '" class="snspopup"><span class="icon-twitter">    TWEET</span></a></li>');</script><li><a href="http://twitter.com/share?url=https://web.archive.org/web/20161030032017id_/http://visitkochijapan.com/privacypolicy/&amp;text=Visit Kochi Japan - The blessings of nature " class="snspopup"><span class="icon-twitter">    TWEET</span></a></li>
-					<script>document.write('<li><a href="https://plus.google.com/share?url=' + url + '" class="snspopup"><span class="icon-google-plus">    SHARE</span></a></li>');</script><li><a href="https://plus.google.com/share?url=https://web.archive.org/web/20161030032017id_/http://visitkochijapan.com/privacypolicy/" class="snspopup"><span class="icon-google-plus">    SHARE</span></a></li>
+					<script>document.write('<li><a href="http://www.facebook.com/sharer.php?u=' + url + '&t=' + title + '" class="snspopup"><span class="icon-facebook">    SHARE</span></a></li>');</script><li><a href="http://www.facebook.com/sharer.php?u=https://web.archive.org/web/20170605022009id_/http://visitkochijapan.com/privacypolicy/&amp;t=Visit Kochi Japan - The blessings of nature " class="snspopup"><span class="icon-facebook">    SHARE</span></a></li>
+					<script>document.write('<li><a href="http://twitter.com/share?url=' + url + '&text=' + title + '" class="snspopup"><span class="icon-twitter">    TWEET</span></a></li>');</script><li><a href="http://twitter.com/share?url=https://web.archive.org/web/20170605022009id_/http://visitkochijapan.com/privacypolicy/&amp;text=Visit Kochi Japan - The blessings of nature " class="snspopup"><span class="icon-twitter">    TWEET</span></a></li>
+					<script>document.write('<li><a href="https://plus.google.com/share?url=' + url + '" class="snspopup"><span class="icon-google-plus">    SHARE</span></a></li>');</script><li><a href="https://plus.google.com/share?url=https://web.archive.org/web/20170605022009id_/http://visitkochijapan.com/privacypolicy/" class="snspopup"><span class="icon-google-plus">    SHARE</span></a></li>
 					<li>
                     	<div class="sns-line">
 						<span>
@@ -350,6 +349,9 @@ var description = $("meta[name=description]").attr("content");
 						<dt><a href="/special/">Specials</a></dt>
 						<dd>
 							<ul>
+								<li><a href="/special/spiritual_sites/">Spiritual sites and relaxing spas to cleanse both body and mind</a></li>
+								<li><a href="/special/treat_your_body/">Treat your body and your taste buds in Kochi</a></li>
+								<li><a href="/special/onlyinkochi/">Only in Kochi</a></li>
 								<li><a href="/special/outdoors/">The Great Outdoors Just Down the Road</a></li>
 								<li><a href="/special/breathtaking/">Enjoy Kochi's Breathtaking Natural Beauty</a></li>								
 								<li><a href="/special/spiritual/">Spiritual Kochi</a></li>
@@ -375,7 +377,7 @@ var description = $("meta[name=description]").attr("content");
 						<dd>
 							<ul>
 								<li><a href="/plan_your_trip/#pickup-anchor">Kochi Tour</a></li>
-								<li><a href="/plan_your_trip/#popular-anchor">Shikoku Tour</a></li>
+								<!-- <li><a href="/plan_your_trip/#popular-anchor">Shikoku Tour</a></li> -->
 								<li><a href="/plan_your_trip/transportation/">Transportation</a></li>
 							</ul>
 						</dd>
@@ -454,18 +456,19 @@ var description = $("meta[name=description]").attr("content");
 				<span>
 				<script type="text/javascript">
 				now=new Date(); tzo=(now.getTimezoneOffset()); now.setTime(now.getTime()+(tzo+540)*60*1000); month=new Array(); month[0]="Jan"; month[1]="Feb"; month[2]="Mar"; month[3]="Apr"; month[4]="May "; month[5]="Jun"; month[6]="Jul"; month[7]="Aug"; month[8]="Sep"; month[9]="Oct"; month[10]="Nov"; month[11]="Dec"; yr=(now.getYear()<1000)? now.getYear()+1900:now.getYear(); mo=month[now.getMonth()]; dy=now.getDate(); if (dy<10) { dy="0"+dy; } document.write(mo+' '+dy+', '+yr+' / ' );
-				</script>Feb 24, 2020 / 
+				</script>Jan 31, 2020 / 
 				</span>
 				<span class="weather_temp_f"></span>
 				<span class="weather_temp_image_f"></span>
 			</div>
-								<div class="link">
+			<div class="link">
 						<ul>
 							<li><a href="https://www.youtube.com/c/Visitkochijapan_movie" target="_blank" class="alphabtn"><img src="/images/common/btn_yt.png" alt="YouTube"></a></li>
 							<li><a href="https://twitter.com/visit_kochi" target="_blank" class="alphabtn"><span class="icon-twitter2 head-icon-tw"></span></a></li>
 							<li><a href="https://www.facebook.com/visitkochijapan" target="_blank" class="alphabtn"><span class="icon-facebook2 head-icon-fb"></span></a></li>
 						</ul>
 					</div>
+
 			<div class="ut-link">
 				<a href="/links/">Links</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 				<a href="/aboutus/">About Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;
