--- a/i/in/inv/invasionautoproducts.com.html
+++ b/i/in/inv/invasionautoproducts.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the invasionautoproducts.com privacy policy that was archived on 2016-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161203112630id_/http%3A//www.invasionautoproducts.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the invasionautoproducts.com privacy policy that was archived on 2017-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170605025602id_/http%3A//www.invasionautoproducts.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head><script type="text/javascript" async="" src="//np.lexity.com/embed/YA/d6f5cc6eb9024c48215f2a38f804bade?id=86fcfdb0d4dc"></script><script src="//paypal.adtag.where.com/merchant.js"></script><script type="text/javascript"> 
  <!-- 
- (new Image).src="http://store.yahoo.net/cgi-bin/refsd?e=http://www.invasionautoproducts.com/privacypolicy.html&h=www.invasionautoproducts.com&v=1.0&dr=" + escape(document.referrer); 
+ (new Image).src="https://store.yahoo.net/cgi-bin/refsd?e=http://www.invasionautoproducts.com/privacypolicy.html&h=www.invasionautoproducts.com&v=1.0&dr=" + escape(document.referrer); 
  --> 
  </script>
-<title>invasionautoproducts.com</title><meta name="Keywords" content="invasion auto products, auto parts, car parts, remanufactured auto part, rebuilt auto part, gear boxes, auto accessories, alternators, starters, distributors, supercharger, superchargers, abs pumps, smog pumps, window motors, turbochargers, turbo chargers, car-parts-usa.com, truck parts, truck accessories, truck accessory, car parts, used auto parts, used car parts, automotive parts, auto parts, salvaged parts, recycled parts"><link rel="stylesheet" type="text/css" href="css-base.css"><link rel="stylesheet" type="text/css" href="css-element.css"><link rel="stylesheet" type="text/css" href="css-contents.css"><link rel="stylesheet" type="text/css" href="css-edits.css"></head><body class="vertical" id="maintype"><script type="text/javascript" id="yfc_loader" src="http://l.yimg.com/sv/store/yfc/js/1.8/loader_37b9635.js?q=yhst-19630673577839&amp;ts=1480554883&amp;p=1&amp;h=order.store.yahoo.net"></script> <div id="ys_superbar">
+<title>invasionautoproducts.com</title><meta name="Keywords" content="invasion auto products, auto parts, car parts, remanufactured auto part, rebuilt auto part, gear boxes, auto accessories, alternators, starters, distributors, supercharger, superchargers, abs pumps, smog pumps, window motors, turbochargers, turbo chargers, car-parts-usa.com, truck parts, truck accessories, truck accessory, car parts, used auto parts, used car parts, automotive parts, auto parts, salvaged parts, recycled parts"><link rel="stylesheet" type="text/css" href="css-base.css"><link rel="stylesheet" type="text/css" href="css-element.css"><link rel="stylesheet" type="text/css" href="css-contents.css"><link rel="stylesheet" type="text/css" href="css-edits.css"></head><body class="vertical" id="maintype"><script type="text/javascript" id="yfc_loader" src="https://s.yimg.com/ae/store/yfc/jscore/loader_11c8f37.js?q=yhst-19630673577839&amp;ts=1496427316&amp;p=1&amp;h=order.store.yahoo.net"></script> <div id="ys_superbar">
 	   <div id="ys_cpers">
 		<div id="yscp_welcome_msg"></div>
 		<div id="yscp_signin_link"></div>
@@ -16,10 +16,10 @@
 	   <div id="yfc_mini"></div>
 	   <div class="ys_clear"></div>
 	</div>
-      <div id="container"><div id="header"><ul id="nav-general"><li><a href="index.html">home</a></li><li><a href="info.html">About Us</a></li><li><a href="privacypolicy.html">Privacy Policy</a></li><li><a href="mailto:samson@invasionautoonline.com">E-Mail</a></li><li><a href="ind.html">Site Map</a></li><li><a href="https://order.store.yahoo.net/yhst-19630673577839/cgi-bin/wg-order?yhst-19630673577839">View Cart</a></li></ul><br class="clear"><h3 id="brandmark"><a href="index.html" title=""><img src="http://ep.yimg.com/ca/I/yhst-19630673577839_2271_64735" width="300" height="111" border="0" hspace="0" vspace="0" alt=""></a></h3><strong id="slogan"><p align="right"> SHOP LIKE YOUR MECHANIC</p>
+      <div id="container"><div id="header"><ul id="nav-general"><li><a href="index.html">home</a></li><li><a href="info.html">About Us</a></li><li><a href="privacypolicy.html">Privacy Policy</a></li><li><a href="mailto:samson@invasionautoonline.com">E-Mail</a></li><li><a href="ind.html">Site Map</a></li><li><a href="https://order.store.yahoo.net/yhst-19630673577839/cgi-bin/wg-order?yhst-19630673577839">View Cart</a></li></ul><br class="clear"><h3 id="brandmark"><a href="index.html" title=""><img src="https://sep.yimg.com/ca/I/yhst-19630673577839_2271_64735" width="300" height="111" border="0" hspace="0" vspace="0" alt=""></a></h3><strong id="slogan"><p align="right"> SHOP LIKE YOUR MECHANIC</p>
 For Phone order call 818-506-8005 1-877-42TURBO(TOLL Free)
 <blink><font color="red">Can't find what you're looking for? Contact Us!</font></blink>
-</strong></div><form method="GET" action="http://search.store.yahoo.net/yhst-19630673577839/cgi-bin/nsearch" name="searcharea" id="searcharea"><fieldset><label class="labelfield" for="searchfield"><span>Search</span><input name="query" type="text" id="query"></label><label class="buttonlabel" for="searchsubmit"><input name="searchsubmit" type="submit" value="Go" class="ys_primary" id="searchsubmit"><input name="vwcatalog" type="hidden" value="yhst-19630673577839"></label></fieldset><input type="hidden" name=".autodone" value="http://www.invasionautoproducts.com/privacypolicy.html"></form><div id="bodyshell"><div id="bodycontent"><div id="info-div"><i>This site is hosted by Yahoo! Store. Yahoo! hosts the store pages, ordering
+</strong></div><form method="GET" action="//search.store.yahoo.com/cgi-bin/nsearch" name="searcharea" id="searcharea"><fieldset><label class="labelfield" for="searchfield"><span>Search</span><input name="query" type="text" id="query"></label><label class="buttonlabel" for="searchsubmit"><input name="searchsubmit" type="submit" value="Go" class="ys_primary" id="searchsubmit"><input name="vwcatalog" type="hidden" value="yhst-19630673577839"></label></fieldset><input type="hidden" name=".autodone" value="http://www.invasionautoproducts.com/privacypolicy.html"></form><div id="bodyshell"><div id="bodycontent"><div id="info-div"><i>This site is hosted by Yahoo! Store. Yahoo! hosts the store pages, ordering
 system, and order data. Yahoo! automatically collects order information but
 may only use this information in the aggregate. If you accessed this store
 through Yahoo! Shopping, Yahoo! also automatically collects information
@@ -47,7 +47,7 @@ csell_env = 'bf1';
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
- </script> <script type="text/javascript" src="http://l.yimg.com/a/ult/ylc_1.9.js"></script> <script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
+ </script> <script type="text/javascript" src="https://s.yimg.com/lq/ult/ylc_1.9.js"></script> <script type="text/javascript" src="https://s.yimg.com/lq/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
@@ -55,7 +55,7 @@ csell_env = 'bf1';
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
-function csell_GLOBAL_INIT_TAG() { var csell_token_map = {}; csell_token_map['TOK_ITEM_ID_LIST'] = 'privacypolicy'; csell_token_map['TOK_BEACON_TYPE'] = 'prod'; csell_token_map['TOK_RAND_KEY'] = 't'; csell_token_map['TOK_SPACEID'] = '2022276099'; csell_token_map['TOK_IS_ORDERABLE'] = '2'; csell_token_map['TOK_STORE_ID'] = 'yhst-19630673577839'; csell_token_map['TOK_URL'] = 'http://geo.yahoo.com'; csell_token_map['TOK_ORDER_HOST'] = 'order.store.yahoo.net';  c = csell_page_data; var x = (typeof storeCheckoutDomain == 'string')?storeCheckoutDomain:'order.store.yahoo.net'; var t = csell_token_map; c['s'] = t['TOK_SPACEID']; c['url'] = t['TOK_URL']; c['si'] = t[ts]; c['ii'] = t['TOK_ITEM_ID_LIST']; c['bt'] = t['TOK_BEACON_TYPE']; c['rnd'] = t['TOK_RAND_KEY']; c['io'] = t['TOK_IS_ORDERABLE']; YStore.addItemUrl = 'http%s://'+x+'/'+t[ts]+'/ymix/MetaController.html?eventName.addEvent&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_itemId=%s&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_quantity=1&ysco_key_cs_item=1&sectionId=ysco.cart&ysco_key_store_id='+t[ts]; } 
+function csell_GLOBAL_INIT_TAG() { var csell_token_map = {}; csell_token_map['TOK_ITEM_ID_LIST'] = 'privacypolicy'; csell_token_map['TOK_BEACON_TYPE'] = 'prod'; csell_token_map['TOK_RAND_KEY'] = 't'; csell_token_map['TOK_SPACEID'] = '2022276099'; csell_token_map['TOK_IS_ORDERABLE'] = '2'; csell_token_map['TOK_STORE_ID'] = 'yhst-19630673577839'; csell_token_map['TOK_URL'] = 'https://geo.yahoo.com'; csell_token_map['TOK_ORDER_HOST'] = 'order.store.yahoo.net';  c = csell_page_data; var x = (typeof storeCheckoutDomain == 'string')?storeCheckoutDomain:'order.store.yahoo.net'; var t = csell_token_map; c['s'] = t['TOK_SPACEID']; c['url'] = t['TOK_URL']; c['si'] = t[ts]; c['ii'] = t['TOK_ITEM_ID_LIST']; c['bt'] = t['TOK_BEACON_TYPE']; c['rnd'] = t['TOK_RAND_KEY']; c['io'] = t['TOK_IS_ORDERABLE']; YStore.addItemUrl = 'http%s://'+x+'/'+t[ts]+'/ymix/MetaController.html?eventName.addEvent&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_itemId=%s&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_quantity=1&ysco_key_cs_item=1&sectionId=ysco.cart&ysco_key_store_id='+t[ts]; } 
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
@@ -63,18 +63,6 @@ function csell_REC_VIEW_TAG() {  var env = (typeof csell_env == 'string')?csell_
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
-var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = 'http://yhst-19630673577839.csell.store.yahoo.net/cs/recommend?itemids=privacypolicy&location=p'; csell_token_map['TOK_SHOW_CS_RECS'] = 'true'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS']; </script> <script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/recs-1.3.2.2.js"></script> <script type="text/javascript">
+var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = 'https://yhst-19630673577839.csell.store.yahoo.net/cs/recommend?itemids=privacypolicy&location=p'; csell_token_map['TOK_SHOW_CS_RECS'] = 'true'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS']; </script> <script type="text/javascript" src="https://s.yimg.com/ae/store/secure/recs-1.3.2.2.js"></script> <script type="text/javascript">
 </script>
-<script type="text/javascript"> 
- <!-- 
- if (document.referrer && (document.referrer!='') && window.Image) 
- { 
- (new Image).src="http://redirect1.vip.store.yahoo.com/cgi-bin/referadd?spcl=1&et=5842ad12&catalog=yhst-19630673577839&r=" + escape(document.referrer) + "&v=1"; }
- // --> 
- </script><script type="text/javascript"> 
- <!-- 
- if (document.referrer && (document.referrer!='') && window.Image) 
- { 
- (new Image).src="http://redirect1.vip.store.yahoo.net/cgi-bin/referadd?spcl=1&et=5842ad12&catalog=yhst-19630673577839&r=" + escape(document.referrer) + "&v=3"; }
- // --> 
- </script><script type="text/javascript">(function (d, w) { var f = function () { var x = d.getElementsByTagName('SCRIPT')[0]; var s = d.createElement('SCRIPT'); s.type = 'text/javascript'; s.async = true; s.src = '//np.lexity.com/embed/YA/d6f5cc6eb9024c48215f2a38f804bade?id=86fcfdb0d4dc'; x.parentNode.insertBefore(s, x); }; w.attachEvent ? w.attachEvent('onload',f) : w.addEventListener('load',f,false); }(document, window)); </script></body></html>
+<script type="text/javascript">(function (d, w) { var f = function () { var x = d.getElementsByTagName('SCRIPT')[0]; var s = d.createElement('SCRIPT'); s.type = 'text/javascript'; s.async = true; s.src = '//np.lexity.com/embed/YA/d6f5cc6eb9024c48215f2a38f804bade?id=86fcfdb0d4dc'; x.parentNode.insertBefore(s, x); }; w.attachEvent ? w.attachEvent('onload',f) : w.addEventListener('load',f,false); }(document, window)); </script></body></html>
